# tower-firmware

./: .gitignore  CLAUDE.md  CONSOLE-PLAN.md  CONSOLE.md  Cargo.toml  FOTA.md  PLAN.md  RADIO.md  README.md  build.rs  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/: radio_climate_monitor.rs  radio_dongle_gateway.rs  radio_push_button.rs
crates/bootloader/: Cargo.toml  build.rs  memory.x
crates/bootloader/src/: main.rs
crates/fota-layout/: Cargo.toml
crates/fota-layout/src/: lib.rs
crates/tower-gw-core/: Cargo.toml
crates/tower-gw-core/src/: lib.rs  queue.rs  registry.rs
crates/tower-kv/: Cargo.toml
crates/tower-kv/src/: lib.rs
crates/tower-net-core/: Cargo.toml
crates/tower-net-core/src/: ack.rs  epoch.rs  lib.rs  nonce.rs  pairing.rs  replay.rs  txctr.rs
crates/tower-radio-core/: Cargo.toml
crates/tower-radio-core/src/: ccm.rs  lib.rs  tests.rs
crates/tower-radio-core/src/ccm/: tests.rs
crates/tower-shell-core/: Cargo.toml
crates/tower-shell-core/src/: lib.rs
docs/: console.md  fota.md  gateway.md  radio.md  storage.md  test-plan.md
examples/: accelerometer.rs  blinky.rs  button.rs  console_demo.rs  console_full.rs  console_panic.rs  crypto_aes_kat.rs  crypto_ccm_kat.rs  crypto_frame_loopback.rs  edge_frame_limits.rs  edge_rapid.rs  edge_recovery.rs  events_demo.rs  fhss_compliance.rs  fhss_kat.rs  fhss_sweep.rs  fota_app.rs  fota_ota.rs  fota_stage.rs  i2cscan.rs  kv_wipe.rs  led_on.rs  lowpower.rs  lse_probe.rs  net_bulk.rs  net_bulk_stream.rs  net_bulk_stress.rs  net_channel.rs  net_confirmed.rs  net_duty_kat.rs  net_p2p.rs  net_pairing.rs  net_persist.rs  net_secure_ping.rs  net_star.rs  radio_afa.rs  radio_band.rs  radio_beacon.rs  radio_csma.rs  radio_cw.rs  (+14 more)
link/: memory-fota-app.x
src/: board.rs  bootguard.rs  button.rs  console.rs  crashlog.rs  led.rs  lib.rs  lis2dh12.rs  power.rs  shell.rs  stack.rs  storage.rs  strip.rs  tmp112.rs  watchdog.rs  ws2812.rs
src/fota/: flash.rs  hostproxy.rs  mod.rs  ota.rs  sink.rs
src/radio/: aes.rs  ccm.rs  config.rs  device.rs  duty.rs  frame.rs  mod.rs  net.rs  regs.rs  spi.rs
src/radio/net/: afa.rs  bulk.rs  fhss.rs  mod.rs  pairing.rs
tools/: check_ram_budget.py  fota_merge.py  protocol_pin_check.py  size_check.py
tools/fota-sign/: Cargo.toml
tools/fota-sign/src/: main.rs
tools/hil/: Cargo.toml  hil.toml  ppk2d.py
tools/hil/src/: lib.rs
tools/hil/tests/: extended.rs  power.rs  radio.rs  smoke.rs
tools/hwtest/: README.md  RESULTS-2026-06-29.md  build.sh  cap.py  fc.sh  m3.sh  tb.sh
