[package]
name = "tower-net-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/hardwario/tower-firmware"
description = "no_std pure decision core of the HARDWARIO TOWER radio network-layer security invariants: the per-peer replay-acceptance rule, the TX-counter reserve-ahead watermark + fail-closed nonce-safety kernel, ACK delivery resolution, the FHSS beacon-epoch acceptance machine, the OTA-pairing confirm freshness rule, and the CCM nonce construction. Split out so the security-critical accept/reject arithmetic can be unit-tested on the host — the firmware itself is no_std and can't cargo test."

# Leaf crate: NO dependencies (not even tower-radio-core — the one shared constant, the CCM
# nonce length, is mirrored and const-asserted equal in the firmware). That keeps this crate
# host-buildable AND host-testable with plain `cargo test`, exactly like crates/tower-kv and
# crates/tower-radio-core. The firmware keeps all I/O, async, radio and EEPROM flow and
# delegates each *decision* here, so no external API changes.
[dependencies]
