[package]
name = "fota-sign"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Host CLI that signs a HARDWARIO TOWER firmware image into a signed FOTA manifest (Ed25519 over the shared tower-protocol Manifest). Carries a DEV key for bring-up; supply a real key for production. See docs/fota.md."

# Standalone host tool — NOT a workspace member (the workspace targets thumbv6m). Build /
# run via `just fota-sign ...` which passes the host target explicitly.

[dependencies]
# Host-side Ed25519 signer. Deterministic (RFC 8032) — no RNG needed to sign. The device
# verifies the same signatures with `salty` (tower-protocol's `verify` feature).
ed25519-dalek = "2"
# Image hashing — SHA-512 truncated to 256 bits, the same digest the device computes (the
# bootloader reuses salty's SHA-512; see `image_digest`).
sha2 = "0.10"
# The shared Manifest layout (so signer + device agree byte-for-byte). The `verify`
# feature pulls salty so the interop test can confirm dalek-signed -> salty-verified.
tower-protocol = { git = "https://github.com/hardwario/tower-protocol", tag = "v1.0.0", features = ["verify"] }

[dev-dependencies]
# Device-side SHA-512, to assert the host (sha2) and device (salty) image digests agree
# (`host_and_device_image_digest_agree`). The same crate + version the bootloader uses.
salty = "0.3"
